# mymonero-libapp-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dev.sublime-project
TEST.xcodeproj/: project.pbxproj
src/APIClient/: HTTPRequests.beast.hpp  HTTPRequests.dummy.hpp  HTTPRequests_Interface.hpp  HostedMonero.cpp  HostedMonero.hpp  parsing.hpp  root_certificates.hpp
src/App/: AppServiceLocator.asio.cpp  AppServiceLocator.cpp  AppServiceLocator.hpp
src/AppBridge/: AppBridge.cpp  AppBridge.hpp  HTTPRequests_Handle_bridge.hpp
src/Currencies/: Currencies.cpp  Currencies.hpp
src/Dispatch/: Dispatch.asio.cpp  Dispatch.asio.hpp  Dispatch_Interface.cpp  Dispatch_Interface.hpp
src/Lists/: PersistedObjectListController.cpp  PersistedObjectListController.hpp
src/OpenAlias/: OpenAlias.cpp  OpenAlias.hpp
src/Passwords/: PasswordController.cpp  PasswordController.hpp
src/Persistence/: PersistableObject.cpp  PersistableObject.hpp  document_persister.cpp  document_persister.hpp
src/RNCryptor-C/: mutils.c  mutils.h  rncryptor_c.c  rncryptor_c.h
src/SendFunds/Controllers/: SendFundsFormSubmissionController.cpp  SendFundsFormSubmissionController.hpp
src/Settings/: SettingsController.cpp  SettingsController.hpp  SettingsProviders.cpp  SettingsProviders.hpp
src/UserIdle/: UserIdle.cpp  UserIdle.hpp
src/Wallets/: Wallet.cpp  Wallet.hpp  Wallet_HostPollingController.cpp  Wallet_HostPollingController.hpp  Wallet_KeyImageCache.cpp  Wallet_KeyImageCache.hpp  Wallet_TxCleanupController.cpp  Wallet_TxCleanupController.hpp  WalletsListController.Full.cpp  WalletsListController.Full.hpp  WalletsListController.Lite.cpp  WalletsListController.Lite.hpp  WalletsListController_Base.cpp  WalletsListController_Base.hpp
src/base64/: base64.hpp
src/contrib/: rapidjson_defines.hpp
test/: test_all.cpp  test_bridge.cpp  test_document_persister.cpp  test_wallets.cpp  tests_common.hpp
xcode/TEST.xcodeproj/: project.pbxproj
